--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,119 +1,117 @@
 * {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 a {
-    text-decoration: none;
-    color: rgb(61, 146, 201);
+  text-decoration: none;
+  color: rgb(61, 146, 201);
 }
 a:hover,
 a:focus {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 h3 {
-    font-weight: 100;
+  font-weight: 100;
 }
 
 /* LAYOUT CSS */
 .pure-img-responsive {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 #layout {
-    padding: 0;
+  padding: 0;
 }
 
 .header {
-    text-align: center;
-    top: auto;
-    margin: 3em auto;
+  text-align: center;
+  top: auto;
+  margin: 3em auto;
 }
 
 .sidebar {
-    background: rgb(61, 79, 93);
-    color: #fff;
+  background: rgb(61, 79, 93);
+  color: #fff;
 }
 
 .brand-title,
 .brand-tagline {
-    margin: 0;
+  margin: 0;
 }
 .brand-title {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 .brand-tagline {
-    font-weight: 300;
-    color: rgb(176, 202, 219);
+  font-weight: 300;
+  color: rgb(176, 202, 219);
 }
 
 .nav-list {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 .nav-list li {
-    padding-left: 5px;
+  padding-left: 5px;
 }
 .nav-item {
-    display: inline-block;
-    *display: inline;
-    zoom: 1;
+  display: inline-block;
+  *display: inline;
+  zoom: 1;
 }
 .nav-item a {
-    background: transparent;
-    border: 2px solid rgb(176, 202, 219);
-    color: #fff;
-    margin-top: 1em;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
-    font-size: 85%;
+  background: transparent;
+  border: 2px solid rgb(176, 202, 219);
+  color: #fff;
+  margin-top: 1em;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  font-size: 85%;
 }
 .nav-item a:hover,
 .nav-item a:focus {
-    border: 2px solid rgb(61, 146, 201);
-    text-decoration: none;
+  border: 2px solid rgb(61, 146, 201);
+  text-decoration: none;
 }
-
 .content-subhead {
-    text-transform: uppercase;
-    color: #aaa;
-    border-bottom: 1px solid #eee;
-    padding: 0.4em 0;
-    font-size: 80%;
-    font-weight: 500;
-    letter-spacing: 0.1em;
+  width: 70%;
+  text-transform: uppercase;
+  color: #aaa;
+  border-bottom: 1px solid #eee;
+  padding: 0.4em 0;
+  font-size: 80%;
+  font-weight: 500;
+  letter-spacing: 0.1em;
 }
-
 .content {
-    padding: 2em 1em 0;
+  padding: 2em 1em 0;
 }
-
 .post {
-    padding-bottom: 2em;
+  padding-bottom: 2em;
 }
 .post-title {
-    font-size: 2em;
-    color: #222;
-    margin-bottom: 0.2em;
+  font-size: 2em;
+  color: #222;
+  margin-bottom: 0.2em;
 }
 .post-avatar {
-    border-radius: 50px;
-    float: right;
-    margin-left: 1em;
+  border-radius: 50px;
+  float: right;
+  margin-left: 1em;
 }
 .post-description {
-    font-family: Georgia, "Cambria", serif;
-    color: #444;
-    line-height: 1.8em;
+  font-family: Georgia, "Cambria", serif;
+  color: #444;
+  line-height: 1.8em;
 }
 .post-meta {
-    color: #999;
-    font-size: 90%;
-    margin: 0;
+  color: #999;
+  font-size: 90%;
+  margin: 0;
 }
 
 .counter-table {
@@ -130,102 +128,97 @@ h3 {
   }
 
 .post-category {
-    margin: 0 0.1em;
-    padding: 0.3em 1em;
-    color: #fff;
-    background: #999;
-    font-size: 80%;
+  margin: 0 0.1em;
+  padding: 0.3em 1em;
+  color: #fff;
+  background: #999;
+  font-size: 80%;
 }
     .post-category-design {
-        background: #5aba59;
+      background: #5aba59;
     }
     .post-category-pure {
-        background: #4d85d1;
+      background: #4d85d1;
     }
     .post-category-yui {
-        background: #8156a7;
+      background: #8156a7;
     }
     .post-category-js {
-        background: #df2d4f;
+      background: #df2d4f;
     }
 
 .post-images {
-    margin: 1em 0;
+  margin: 1em 0;
 }
 .post-image-meta {
-    margin-top: -3.5em;
-    margin-left: 1em;
-    color: #fff;
-    text-shadow: 0 1px 1px #333;
+  margin-top: -3.5em;
+  margin-left: 1em;
+  color: #fff;
+  text-shadow: 0 1px 1px #333;
 }
 
 .footer {
-    text-align: center;
-    padding: 1em 0;
+  text-align: center;
+  padding: 1em 0;
 }
 .footer a {
-    color: #ccc;
-    font-size: 80%;
+  color: #ccc;
+  font-size: 80%;
 }
 .footer .pure-menu a:hover,
 .footer .pure-menu a:focus {
-    background: none;
+  background: none;
 }
 
 @media (min-width: 48em) {
-    .content {
-        padding: 2em 3em 0;
-        margin-left: 25%;
-    }
+  .content {
+    padding: 2em 3em 0;
+    margin-left: 25%;
+  }
 
-    .header {
-        margin: 80% 2em 0;
-        text-align: right;
-    }
+  .header {
+    margin: 80% 2em 0;
+    text-align: right;
+  }
 
-    .sidebar {
-        position: fixed;
-        top: 0;
-        bottom: 0;
-    }
+  .sidebar {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+  }
 }
-
 .todo-input {
   width: 60%;
   padding-left: 5px;
 }
-
 .list-item {
   margin-bottom: 10px;
   list-style: none;
   width: 60%;
 }
-
 .mark-todo,
 .unmark-todo {
   float: right;
   margin-right: 5px;
 }
-
 .completed {
   text-decoration: line-through;
   color: #ccc;
 }
-
 .remove-todo {
   float: right;
 }
-
 .archive-actions {
-  margin-top: 30px;
   width: 70%;
-  border-top: 1px solid #ccc;
-  padding-top: 5px;
+  border-top: 1px solid #eee;
+  padding: 0.4em 0;
 }
-
 .archive-info {
   margin-left: 10px;
   font-size: 13px;
   color: #ccc;
   float: right;
+}
+.todo-app {
+  margin: 30px 0 30px 0;
 }
